# aurora

./: .gitignore  Cargo.toml  Dockerfile  INSPIRATION.md  README.md
.sqlx/: query-013dd5adad89418f51f4db57b3ba5f8cb2cbc38df0f01bb8d1cc1f92968f6e93.json  query-0b4df8624845363324ef16a6da79d7275c63593f1b09e851bf694ba865bb9c22.json  query-1394829260c7cb5819d1139d1bb8cdce0464fad118b934d289215134291bd378.json  query-20f7eccd276eca3efa706a78d46eed3cecff867a599b686f6e002d038beba7f1.json  query-2ef1683dd6848c86b3485b9383a382d32dde137519fdf70601cfa5834cd9553b.json  query-33ae7225b2bede74f9aff47547a74fe0e20081db52420cfc90fb32111455445e.json  query-3a52dd6b80548a49a6f2c1ad52f8a73c1952fb104673e2abe3f7732244740326.json  query-3b4ad268817f5ee20e595eea85d3a13c67728762eb27d30a2553ca6829e0eb87.json  query-3f77b3e9258d2dc3d696e88d1dfda09eb7d377526b9bc843bb18189fb1c8da16.json  query-440f4e3608f57f825d96d5fb50d97ba6643432d712c4797667b083fbf2e5759e.json  query-451066d3d909c8bd7dd87ef10e529cdff1ce20cc73df3f2107655c36181654c7.json  query-4552d41e9f821ffac32b27d1a03dc75ea23085d21ad2f4734cccead8fadbc1b9.json  query-59ecfc0f3f0a721ba2fb8b4a953313e0b0701ae34c1e609f3f92a4009d6ee4b3.json  query-5e4585c05cf2da88e2a9df61554c5bc061e854dc5df52454b28294eadc5633f8.json  query-6124d900ae435fa13f9e9ae91da979545d87ecc3c1fd3e6a9a4f109305170f79.json  query-66d537f267954f782b7a48089bf3a40169178b9e949c404dfc0312f8c462887a.json  query-754ed0983b9058e70a9b41be50be6d6b612b082425d2cedae823ddd4038a0e4d.json  query-888960b215b9d801a97da7285fa268ae738ecbc296f92860e13e87cd2f59a8eb.json  query-95f36c1fac84dfb5dc45e82b6004697004635ea5a0a901bbcc03c01b0a0df9c8.json  query-972a9044d7fc4d533925848ffedd81d1016fdeedb6cdf9d74d129fb41998fd00.json  query-976d0822688ed21ca52ef1350ebd98c8bd3c6b0bbf0ac25ada80bcb33789100e.json  (+16 more)
beam/: Cargo.toml
beam/.sqlx/: query-897c75f5380a08d9cb048c392cc54d071a646bf946f2c694f71f854137c9d91d.json  query-8dcd9e3cd180bb92caace4b85b4f51706bb945f8e5149d7ff187458051e585b2.json  query-cf20713311d765a4c09ed83152557b7b02c983373375deeae97fe4e0dec57278.json  query-f1964efbb168241bdd340bc0678dc172bcd59c061d99317155cb0321a17209dc.json
beam/migrations/: 20241207051216_initial.sql
beam/src/: algo.rs  main.rs  spider.rs
crates/aurora_api/: Cargo.toml
crates/aurora_api/src/: channels.rs  error.rs  fanout.rs  flags.rs  gateway.rs  guilds.rs  lib.rs  main.rs  messages.rs  pubsub.rs  state.rs  token.rs  users.rs
datalib/: README.md
gateway/: README.md  mix.exs  (+2 more)
(+103 files in other folders)
