[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1", features = [ "full" ] }
axum = { version = "0.7", features = [ "ws" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_valid = "0.25"
regex = "1"
redis = { version = "0.27.5", features = [ "tokio-native-tls-comp" ] }
argon2 = "0.5"
uuid7 = "1.1.0"
jsonwebtoken = "9"
chrono = "0.4"
dotenvy = "0.15"
bitflags = "2"
futures-util = "0.3"

aurora_db = { path = "./crates/aurora_db" }
