[workspace]
resolver = "2"
members = ["crates/*", "gateway/apps/db/native/derailed_db"]

[workspace.dependencies]
tokio = { version = "1", features = [ "full" ] }
axum = { version = "0.7", features = [ "ws" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_valid = "0.25"
regex = "1"
argon2 = "0.5"
uuid7 = "1.1.0"
jsonwebtoken = "9"
chrono = "0.4"
dotenvy = "0.15"
bitflags = "2"
futures-util = "0.3"
tower-http = { version = "0.6", features = [ "cors" ] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-build = "0.12"
rustler = "0.34.0"

aurora_api = { path = "./crates/aurora_api" }
aurora_db = { path = "./crates/aurora_db" }
aurora_protos = { path = "./crates/aurora_protos" }
